# crud-django

crud_django_app/: manage.py  pyproject.toml
crud_django_app/crud_django_app/: asgi.py  settings.py  urls.py  wsgi.py
crud_django_app/polls/: admin.py  models.py  tests.py  urls.py  views.py
crud_django_app/polls/domain/entity/: choice.py  question.py
crud_django_app/polls/domain/repository/: repository.py
crud_django_app/polls/migrations/: 0001_initial.py  0002_rename_choices_choice.py
crud_django_app/polls/templates/polls/: detail.html  details.html  index.html  results.html
